# Solar-Storage-Co-Optimization

./: .gitignore  LICENSE  README.md  notebooks  pyproject.toml  requirements.txt
Outputs/Run_test_sweep/: Run_test_sweep_summary.csv  Sweep_A1000.xlsx  Sweep_A200.xlsx  Sweep_A2000.xlsx  Sweep_A3000.xlsx  Sweep_A400.xlsx  Sweep_A800.xlsx
frontend/: index.html
notebooks/: README.md
src/microgrid/: __init__.py
src/microgrid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/microgrid/Launch_Files/: Base_case_launch.csv  E_0.01.csv  E_0.02.csv  E_0.03.csv  insolation_-0.05_bifacial_fixed.csv  insolation_-0.1_bifacial_fixed.csv  insolation_0.05_bifacial_fixed.csv  insolation_0.1_bifacial_fixed.csv  sweep_1_itc_area.csv  sweep_2_itc_area.csv  sweep_3_itc_area.csv  sweep_4_itc_area.csv  sweep_5_itc_area.csv  test_Base_case_launch.csv
src/microgrid/api/: __init__.py  main.py
src/microgrid/core/: __init__.py  excel_utils.py  logging_utils.py  model_helpers.py  pv_sizing_limits.py
src/microgrid/input_files/: 2test_pv_table.csv  Base_battery_table.csv  Base_pv_table.csv  Hourly_parameter_data.csv  bat_tab_lion.csv  bi_pv_table.csv  cdte_pv_table.csv  noNaS_battery_table.csv
src/microgrid/scripts/: __init__.py  parallel_sweep.py  run_single_loop.py  run_sweep.py
src/microgrid/solar_storage_model/: solar_storage_model.mod
