[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microgrid"
version = "0.1.0"
description = "Python front-end for AMPL-based microgrid MILP sweeps and Excel post-processing."
authors = [
  { name = "Michael Caballero" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "amplpy>=0.13",   # Python–AMPL bridge
  "pandas>=2.0",   # DataFrames, CSV/Excel IO
  "numpy>=1.24",   # Numerical utilities
  "openpyxl>=3.1", # Excel read/write engine used by pandas
  "tqdm>=4.66",    # Progress bars in parallel launchers
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.13",
]

[tool.setuptools]
# Treat these as standalone modules installable via pip
py-modules = [
  "Completed_Loop_0_hour_new",
  "Completed_sweep_script_4_26_new",
  "excel_utils_w_limit_bat",
  "logging_utils_new",
  "model_helpers_new",
  "parallel_sweep_launcher",
  "parallel_sweep_launcher_fixed",
  "pv_sizing_limits",
]

[tool.setuptools.packages.find]
where = ["."]
