[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microgrid"
version = "0.1.0"
description = "Python front-end for AMPL-based microgrid MILP sweeps and Excel post-processing."
authors = [
  { name = "Michael Caballero" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "amplpy>=0.13",
  "pandas>=2.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.13",
]

[project.scripts]
microgrid-single-run   = "microgrid.scripts.run_single_loop:main"
microgrid-sweep-run    = "microgrid.scripts.run_sweep:main"
microgrid-launch-files = "microgrid.scripts.parallel_sweep:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
